<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iTriage</string>
    <string name="credentials_filename">passwords.txt</string>
    <string name="er_database_filename">er.json</string>
    <string name="patient_not_found">Patient not found</string>

    <!-- Strings related to LoginActivity -->
    <string name="title_activity_login">Login</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="new_user">Register</string>
    <string name="prompt_admin">Admin Password</string>
    <string name="admin_password">PraiseTheTsar</string>

    <string-array name="credentials">
        <item>nurse:foo:bar</item>
        <item>physician:hello:world</item>
    </string-array>

    <!-- Strings related to PatientListActivity -->
    <string name="title_activity_patient_list">Patients</string>
    <string name="patient_search">Search Patients</string>
    <string name="patient_add">Add Patient</string>
    <string name="patients_save">Save Data</string>
    <string name="log_out">Log out</string>
    <string name="search_field">Search Patient</string>

    <string-array name="patient_filter">
        <item>By Urgency</item>
        <item>By Arrival Time</item>
        <item>All</item>
    </string-array>

    <string name="number">Number</string>
    <string name="urgency">Urgency</string>
    <string name="arrival_time">Arrival Time</string>

    <string name="no_patients">No patients in database</string>
    <string name="patient_list_thumbnail_description">Improving</string>

    <!-- Strings related to PatientDetailActivity -->
    <string name="delete_patient">Delete patient</string>
    <string name="record">Record</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="vital_signs">Vital Signs</string>
    <string name="none_recorded">None recorded</string>

    <string-array name="patient_vital_signs_labels">
        <item>Temperature</item>
        <item>Blood Pressure</item>
        <item>Heart Rate</item>
    </string-array>

    <string name="symptoms">Symptoms</string>
    <string name="symptoms_placeholder">No symptoms have been record yet</string>
    <string name="symptoms_text">Input symptoms here</string>
    <string name="prescriptions">Prescriptions</string>
    <string name="info">Info</string>

    <string-array name="patient_info_labels">
        <item>Name</item>
        <item>Birth Date</item>
        <item>Health Card Number</item>
        <item>Arival Time</item>
    </string-array>

    <string name="last_seen_by_doctor">Last seen by doctor</string>

    <!-- Strings related to PatientEditActivity -->
    <string name="title_activity_patient_edit">Editing Patient</string>
    <string name="patient_edit_save">Save</string>
    <string name="patient_name">Name</string>
    <string name="patient_healthcardnumber">Health Card Number</string>
    <string name="patient_edit_birth_date_header">Birth Date</string>
    <string name="patient_edit_arrival_time_header">Arrival Time</string>
    <string name="temperature">Temperature</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="patient_blood_pressure_s">Systolic</string>
    <string name="patient_blood_pressure_d">Diastolic</string>
    <string name="patient_record_save">Save</string>
    <string name="error_blank_name">Name must not be blank</string>
    <string name="error_blank_health_card_number">Health card number must not be blank</string>

    <!-- Strings related to PatientRecordVitalSignsActivity -->
    <string name="error_blank_field">Field is empty</string>
    <string name="error_digits">Field must contain only digits</string>

    <!-- Strings related to PatientAddPrescriptionActivity -->
    <string name="patient_medication_header">Medication</string>
    <string name="patient_name_of_medication">Name of medication&#8230;</string>
    <string name="patient_instructions_header">Instructions</string>
    <string name="patient_instructions">Instructions&#8230;</string>
    <string name="patient_record_prescription">Save</string>

    <!-- String related to PatientVitalSignsActivity -->
    <string name="vital_signs_empty">No vital signs recorded</string>
    <string name="symptoms_empty">No symptoms recorded</string>
    <string name="symptoms">Symptoms</string>
    <string name="title_activity_patient_prescription">PatientPrescriptionActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <!-- Strings related to prescription_item -->
    <string name="medication">Medication</string>
    <string name="instructions">Instructions</string>
    <string name="prescriptions_empty">No prescriptions recorded</string>
    <string name="seen_by_doctor_empty">No doctor visits recorded</string>

</resources>
