<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:paddingStart="?android:attr/listPreferredItemPaddingStart"
              android:paddingEnd="?android:attr/listPreferredItemPaddingEnd">

    <ImageView android:id="@android:id/icon"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:contentDescription="@string/patient_list_thumbnail_description" />

    <LinearLayout android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:paddingBottom="4dp"
                  android:minHeight="?android:attr/listPreferredItemHeight"
                  android:mode="twoLine">

        <TextView android:id="@+id/name"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="8dp"
                  android:textAppearance="?android:attr/textAppearanceListItem" />

        <LinearLayout android:orientation="horizontal"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content">

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textAllCaps="true"
                      android:text="@string/number"
                      android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView android:id="@+id/health_card_number"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:paddingLeft="8dp"
                      android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>

        <LinearLayout android:orientation="horizontal"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content">

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textAllCaps="true"
                      android:text="@string/urgency"
                      android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView android:id="@+id/urgency"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:paddingLeft="8dp"
                      android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>

        <LinearLayout android:orientation="horizontal"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content">

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textAllCaps="true"
                      android:text="@string/arrival_time"
                      android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView android:id="@+id/arrival_time"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:paddingLeft="8dp"
                      android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>